Changes by Piezo_:
	Improved portal response time by changing the teleport routine from a node update to a global step
	Changed how portals update their world-node
	Changed model scale and hitbox dimensions
	Vertically offset model to be partially buried.
	Non-player objects can now travel through portals
	Reduced active portal brightness somewhat
	Restructured portal network to prevent players causing trouble by naming themself "players" or "registered_players"
	Visual style and sounds completely re-done to add originality
	Public portals can now be used by anyone, but only the portal's owner can set the description and public/private state.
	Server operators can disable "ownership" of portals by setting meseportals.allowPrivatePortals (in init.lua) to false
	Added search bar, and formspec security measures.
	A maximum number of allowed portals per player can be set via meseportals.maxPlayerPortals
	Added permissions "msp_admin", which allows full control and access to all portals, and "msp_unlimited", which bypasses the portal cap.
	Reorganized/Split up files
	Position and rotation relative to the portal are now maintained, making travel feel smoother.