@@ -12,5 +12,6 @@ Changes by Piezo_:
 	Added search bar, and formspec security measures.
 	A maximum number of allowed portals per player can be set via meseportals.maxPlayerPortals
 	Added permissions "msp_admin", which allows full control and access to all portals, and "msp_unlimited", which bypasses the portal cap.
+	Portals and all associated nodes are now fully protection-aware.
 	Reorganized/Split up files
 	Position and rotation relative to the portal are now maintained, making travel feel smoother.
